--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="homepage">
 <header>
-    <div class="container">
+    <div class="container clean">
         <nav class="js-navigation">
             <a href="#">Product</a>
             <a href="#">Features</a>
@@ -32,19 +32,21 @@
     </div>
 </header>
 
-<section class="section section-1">
+<section class="section main">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <h1>Lucky Chain</h1>
-                <p>
+                <blockquote>
                     Trust protocol for decentralized
                     competitive environments
-                </p>
+                </blockquote>
                 <form>
                     <p>Subscribe to our newsletter and be the first to learn about the Token sale</p>
-                    <input type="email" placeholder="Email">
-                    <button>Subscribe</button>
+                    <div class="form-group">
+                        <input type="email" placeholder="Email">
+                        <button>Subscribe</button>
+                    </div>
                 </form>
                 <a href="#" download>White Paper (PDF)</a>
             </div>
