--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
         </div>
     </div>
 </section>
+
 <section class="section section-2">
     <div class="container">
         <h2>Our life is riddled with uncertainties</h2>
@@ -282,6 +283,9 @@
         </div>
     </div>
 </section>
+
+
+/******************* RUSLAN ***************/
 <section class="section section-9">
     <div class="container">
         <h2></h2>
