--- a/public/index.html
+++ b/public/index.html
@@ -77,25 +77,40 @@
                 <h3>Most common cases</h3>
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Any rating systems based on votes made by ordinary people</p>
+                        <div class="icon-block">
+                            <img src="http://via.placeholder.com/50x50" alt="" title="">
+                            <p>Any rating systems based on votes made by ordinary people</p>
+                        </div>
                     </div>
                     <div class="col-md-6">
-                        <p>Lotteries and jackpots</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>Housing and utilities and any other services that we don’t trust at this time</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p>Other cases when we rely on third party and can be deceived</p>
+                        <div class="icon-block">
+                            <img src="http://via.placeholder.com/50x50" alt="" title="">
+                            <p>Lotteries and jackpots</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Product origins in local shops</p>
+                        <div class="icon-block">
+                            <img src="http://via.placeholder.com/50x50" alt="" title="">
+                            <p>Housing and utilities and any other services that we don’t trust at this time</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="icon-block">
+                            <img src="http://via.placeholder.com/50x50" alt="" title="">
+                            <p>Other cases when we rely on third party and can be deceived</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="icon-block">
+                            <img src="http://via.placeholder.com/50x50" alt="" title="">
+                            <p>Product origins in local shops</p>
+                        </div>
                     </div>
                 </div>
             </div>
