--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <h2>Our life is riddled with uncertainties</h2>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <h3>
                     The lack of transparency leads to the situation when you can not be sure that competition is fair
                     and nobody
@@ -73,19 +73,35 @@
                     decided to create LuckyChain.
                 </p>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-6">
                 <h3>Most common cases</h3>
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
-                            <img src="http://via.placeholder.com/50x50" alt="" title="">
-                            <p>Any rating systems based on votes made by ordinary people</p>
+                            <img src="./images/icons/icon_01.svg" alt="" title="">
+                            <p class="small">Any rating systems based on votes made by ordinary people</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="icon-block">
-                            <img src="http://via.placeholder.com/50x50" alt="" title="">
-                            <p>Lotteries and jackpots</p>
+                            <img src="./images/icons/Icon_04.svg" alt="" title="">
+                            <p class="small">Lotteries and jackpots</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row m-b-40">
+                    <div class="col-md-6">
+                        <div class="icon-block">
+                            <img src="./images/icons/Icon_02.svg" alt="" title="">
+                            <p class="small">Housing and utilities and any other services that we don’t trust at this time</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="icon-block">
+                            <img src="./images/icons/Icon_05.svg" alt="" title="">
+                            <p class="small">Other cases when we rely on third party and can be deceived</p>
                         </div>
                     </div>
                 </div>
@@ -93,23 +109,8 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="icon-block">
-                            <img src="http://via.placeholder.com/50x50" alt="" title="">
-                            <p>Housing and utilities and any other services that we don’t trust at this time</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="icon-block">
-                            <img src="http://via.placeholder.com/50x50" alt="" title="">
-                            <p>Other cases when we rely on third party and can be deceived</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="icon-block">
-                            <img src="http://via.placeholder.com/50x50" alt="" title="">
-                            <p>Product origins in local shops</p>
+                            <img src="./images/icons/Icon_03.svg" alt="" title="">
+                            <p class="small">Product origins in local shops</p>
                         </div>
                     </div>
                 </div>
@@ -121,7 +122,7 @@
     <div class="container">
         <h2>Solution: Trust Protocol</h2>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <h3>Trust protocol is a high-level protocol based on the blockchain technology</h3>
                 <p>In the trust protocol, any interaction between participants can be seen as a flat and fair.</p>
                 <p>As we cultivate fairplay among everyone, we intend to create such a decentralized protocol that
@@ -131,12 +132,25 @@
                     all the
                     ratings are stored on the blockchain.</p>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-6">
                 <h3>The LuckyChain trust protocol has several features:</h3>
-                <p>Enables to interact for great number of participants</p>
-                <p>Flexible enough to be adopted to different competitive environments</p>
-                <p>Doesn’t rely on any central authority</p>
-                <p>Regular people have a single point of reference toward trust, and business</p>
+                <div class="icon-block m-b-40">
+                    <img src="./images/icons/Icon_06.svg" alt="" title="">
+                    <p class="small">Enables to interact for great number of participants</p>
+                </div>
+                <div class="icon-block m-b-40">
+                    <img src="./images/icons/Icon_07.svg" alt="" title="">
+                    <p class="small">Flexible enough to be adopted to different competitive environments</p>
+                </div>
+                <div class="icon-block m-b-40">
+                    <img src="./images/icons/Icon_08.svg" alt="" title="">
+                    <p class="small">Doesn’t rely on any central authority</p>
+                </div>
+                <div class="icon-block">
+                    <img src="./images/icons/Icon_09-1.svg" alt="" title="">
+                    <p class="small">Regular people have a single point of reference toward trust, and business</p>
+                </div>
             </div>
         </div>
     </div>
