--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,8 @@
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_02.svg" alt="" title="">
-                            <p class="small">Housing and utilities and any other services that we don’t trust at this time</p>
+                            <p class="small">Housing and utilities and any other services that we don’t trust at this
+                                time</p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -118,7 +119,7 @@
         </div>
     </div>
 </section>
-<section class="section section-3">
+<section class="section bg-dark section-3">
     <div class="container">
         <h2>Solution: Trust Protocol</h2>
         <div class="row">
@@ -153,37 +154,56 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="section section-4">
-    <div class="container">
+        <div class="separator"></div>
         <div class="row">
-            <div class="col-md-6">
-                <h2>Online Gaming Platform</h2>
-                <p>
-                    Concentrating on establishing a platform for online gambling services as they seem the most easily
-                    monetizable
-                    ones.
-                </p>
-                <p>
-                    We bring monetization to analogue and video games, establish strategic partnerships with game
-                    developers and
-                    gaming platforms.
-                </p>
-                <p>
-                    LuckyChain platform will have approached its equilibrium stage, when any gaming economy can be built
-                    over
-                    LuckyChain protocol.
-                </p>
+            <div class="col-md-5">
+                <h4>Phase #1</h4>
+                <h2 class="small">Online Gaming Platform</h2>
+                <div class="step">
+                    <div class="num">
+                        1 <span>STEP</span>
+                    </div>
+                    <div class="line"></div>
+                    <p>
+                        Concentrating on establishing a platform for online gambling services as they seem the most
+                        easily monetizable ones.
+                    </p>
+                </div>
+                <div class="step">
+                    <div class="num">
+                        2 <span>STEP</span>
+                    </div>
+                    <div class="line"></div>
+                    <p>
+                        We bring monetization to analogue and video games, establish strategic partnerships with game
+                        developers and
+                        gaming platforms.
+                    </p>
+                </div>
+                <div class="step">
+                    <div class="num">
+                        3 <span>STEP</span>
+                    </div>
+                    <div class="line"></div>
+                    <p>
+                        LuckyChain platform will have approached its equilibrium stage, when any gaming economy can be
+                        built
+                        over
+                        LuckyChain protocol.
+                    </p>
+                </div>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-6">
-                <h2>LuckyChain Foundation</h2>
+                <h4>Phase #2</h4>
+                <h2 class="small">LuckyChain Foundation</h2>
                 <p>
                     Community for fair competitive environments. Every blockchain-based company can be easily integrated
                     with
                     LC Foundation after a careful audit of smart contracts
                     in use.
-                    <br>
+                </p>
+                <p>
                     The LC Foundation membership will designate that the company operates in totally transparent and
                     trustworthy
                     way.
@@ -192,7 +212,8 @@
         </div>
     </div>
 </section>
-<section class="section section-5">
+
+<section class="section bg-light section-5">
     <div class="container">
         <h2>Lucky Chain Protocol For Gaming Industry</h2>
         <div class="row">
