--- a/public/index.html
+++ b/public/index.html
@@ -53,14 +53,12 @@
 						<h1>Lucky Chain</h1>
 					</div>
 
-					<p >
+					<p>
 						Trust protocol for decentralized
 						competitive environments
 					</p>
 
 				</div>
-
-
 
 
 				<form class="header-form">
@@ -125,7 +123,7 @@
 					</div>
 				</div>
 
-                <div class="row m-b-40">
+				<div class="row m-b-40">
 					<div class="col-md-6">
 						<div class="icon-block">
 							<img src="./images/icons/Icon_02.svg" alt="" title="">
@@ -153,107 +151,107 @@
 	</div>
 </section>
 <section class="section bg-dark section-3">
-    <div class="container">
-        <h2>Solution: Trust Protocol</h2>
-        <div class="row">
-            <div class="col-md-5">
-                <h3>Trust protocol is a high-level protocol based on the blockchain technology</h3>
-                <p>In the trust protocol, any interaction between participants can be seen as a flat and fair.</p>
-                <p>As we cultivate fairplay among everyone, we intend to create such a decentralized protocol that
-                    eliminates
-                    any chance of unfair winning.</p>
-                <p>For instance, the owner of the movie rating website cannot cheat over the potential viewers because
-                    all the
-                    ratings are stored on the blockchain.</p>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-6">
-                <h3>The LuckyChain trust protocol has several features:</h3>
-                <div class="icon-block m-b-40">
-                    <img src="./images/icons/Icon_06.svg" alt="" title="">
-                    <p class="small">Enables to interact for great number of participants</p>
-                </div>
-                <div class="icon-block m-b-40">
-                    <img src="./images/icons/Icon_07.svg" alt="" title="">
-                    <p class="small">Flexible enough to be adopted to different competitive environments</p>
-                </div>
-                <div class="icon-block m-b-40">
-                    <img src="./images/icons/Icon_08.svg" alt="" title="">
-                    <p class="small">Doesn’t rely on any central authority</p>
-                </div>
-                <div class="icon-block">
-                    <img src="./images/icons/Icon_09-1.svg" alt="" title="">
-                    <p class="small">Regular people have a single point of reference toward trust, and business</p>
-                </div>
-            </div>
-        </div>
-        <div class="separator"></div>
-        <div class="row">
-            <div class="col-md-5">
-                <h4>Phase #1</h4>
-                <h2 class="small">Online Gaming Platform</h2>
-                <div class="step">
-                    <div class="num">
-                        1 <span>STEP</span>
-                    </div>
-                    <div class="line"></div>
-                    <p>
-                        Concentrating on establishing a platform for online gambling services as they seem the most
-                        easily monetizable ones.
-                    </p>
-                </div>
-                <div class="step">
-                    <div class="num">
-                        2 <span>STEP</span>
-                    </div>
-                    <div class="line"></div>
-                    <p>
-                        We bring monetization to analogue and video games, establish strategic partnerships with game
-                        developers and
-                        gaming platforms.
-                    </p>
-                </div>
-                <div class="step">
-                    <div class="num">
-                        3 <span>STEP</span>
-                    </div>
-                    <div class="line"></div>
-                    <p>
-                        LuckyChain platform will have approached its equilibrium stage, when any gaming economy can be
-                        built
-                        over
-                        LuckyChain protocol.
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-6">
-                <h4>Phase #2</h4>
-                <h2 class="small">LuckyChain Foundation</h2>
-                <p>
-                    Community for fair competitive environments. Every blockchain-based company can be easily integrated
-                    with
-                    LC Foundation after a careful audit of smart contracts
-                    in use.
-                </p>
-                <p>
-                    The LC Foundation membership will designate that the company operates in totally transparent and
-                    trustworthy
-                    way.
-                </p>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<h2>Solution: Trust Protocol</h2>
+		<div class="row">
+			<div class="col-md-5">
+				<h3>Trust protocol is a high-level protocol based on the blockchain technology</h3>
+				<p>In the trust protocol, any interaction between participants can be seen as a flat and fair.</p>
+				<p>As we cultivate fairplay among everyone, we intend to create such a decentralized protocol that
+					eliminates
+					any chance of unfair winning.</p>
+				<p>For instance, the owner of the movie rating website cannot cheat over the potential viewers because
+					all the
+					ratings are stored on the blockchain.</p>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-6">
+				<h3>The LuckyChain trust protocol has several features:</h3>
+				<div class="icon-block m-b-40">
+					<img src="./images/icons/Icon_06.svg" alt="" title="">
+					<p class="small">Enables to interact for great number of participants</p>
+				</div>
+				<div class="icon-block m-b-40">
+					<img src="./images/icons/Icon_07.svg" alt="" title="">
+					<p class="small">Flexible enough to be adopted to different competitive environments</p>
+				</div>
+				<div class="icon-block m-b-40">
+					<img src="./images/icons/Icon_08.svg" alt="" title="">
+					<p class="small">Doesn’t rely on any central authority</p>
+				</div>
+				<div class="icon-block">
+					<img src="./images/icons/Icon_09-1.svg" alt="" title="">
+					<p class="small">Regular people have a single point of reference toward trust, and business</p>
+				</div>
+			</div>
+		</div>
+		<div class="separator"></div>
+		<div class="row">
+			<div class="col-md-5">
+				<h4>Phase #1</h4>
+				<h2 class="small">Online Gaming Platform</h2>
+				<div class="step">
+					<div class="num">
+						1 <span>STEP</span>
+					</div>
+					<div class="line"></div>
+					<p>
+						Concentrating on establishing a platform for online gambling services as they seem the most
+						easily monetizable ones.
+					</p>
+				</div>
+				<div class="step">
+					<div class="num">
+						2 <span>STEP</span>
+					</div>
+					<div class="line"></div>
+					<p>
+						We bring monetization to analogue and video games, establish strategic partnerships with game
+						developers and
+						gaming platforms.
+					</p>
+				</div>
+				<div class="step">
+					<div class="num">
+						3 <span>STEP</span>
+					</div>
+					<div class="line"></div>
+					<p>
+						LuckyChain platform will have approached its equilibrium stage, when any gaming economy can be
+						built
+						over
+						LuckyChain protocol.
+					</p>
+				</div>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-6">
+				<h4>Phase #2</h4>
+				<h2 class="small">LuckyChain Foundation</h2>
+				<p>
+					Community for fair competitive environments. Every blockchain-based company can be easily integrated
+					with
+					LC Foundation after a careful audit of smart contracts
+					in use.
+				</p>
+				<p>
+					The LC Foundation membership will designate that the company operates in totally transparent and
+					trustworthy
+					way.
+				</p>
+			</div>
+		</div>
+	</div>
 </section>
 
 <section class="section bg-light section-5">
-    <div class="container">
-        <h2>Lucky Chain Protocol For Gaming Industry</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <p>Our protocol is dedicated to enable trust and transparency throughout multiple industries, so it’s
-                    obvious to
-                    show the functionality in one of the most corrupted one.</p>
+	<div class="container">
+		<h2>Lucky Chain Protocol For Gaming Industry</h2>
+		<div class="row">
+			<div class="col-md-6">
+				<p>Our protocol is dedicated to enable trust and transparency throughout multiple industries, so it’s
+					obvious to
+					show the functionality in one of the most corrupted one.</p>
 
 			</div>
 			<div class="col-md-6">
@@ -371,20 +369,158 @@
 /******************* RUSLAN ***************/
 <section class="section section-9">
 	<div class="container">
-		<h2></h2>
+		<h2>Team</h2>
 		<div class="row">
-			<div class="col-md-12"></div>
+			<div class="col-md-2">
+
+				<div class="team-member">
+
+					<img src="/images/team/member_ruslanin.png" alt="">
+					<div class="team-member-caption">
+						<h3>Ruslan Inozemtsev</h3>
+						<h4>CEO</h4>
+					</div>
+				</div>
+
+			</div>
+			<div class="col-md-2">
+
+
+				<div class="team-member">
+					<img src="/images/team/member_ruslanin.png" alt="">
+					<div class="team-member-caption">
+					<h3>Anna Grigoryeva</h3>
+					<h4>ICO Manager</h4>
+					</div>
+				</div>
+
+
+			</div>
+			<div class="col-md-2">
+
+
+				<div class="team-member">
+					<img src="/images/team/member_ruslanin.png" alt="">
+					<div class="team-member-caption">
+					<h3>Nick Avramov</h3>
+					<h4>Product Manager</h4>
+					</div>
+				</div>
+
+
+			</div>
+			<div class="col-md-2">
+
+
+				<div class="team-member">
+					<img src="/images/team/member_shushkovvl.png" alt="">
+					<div class="team-member-caption">
+					<h3>Vova Shushkov</h3>
+					<h4>Backend Engineer</h4>
+					</div>
+				</div>
+
+
+			</div>
+			<div class="col-md-2">
+
+
+				<div class="team-member">
+					<img src="/images/team/member_ashikhminal.png" alt="">
+					<div class="team-member-caption">
+					<h3>Alex Ashikhmin</h3>
+					<h4>Frontend Engineer</h4>
+					</div>
+				</div>
+
+
+			</div>
+			<div class="col-md-2">
+
+
+				<div class="team-member">
+					<img src="/images/team/member_gogolevdm.png" alt="">
+					<div class="team-member-caption">
+					<h3>Dmitry Gogolev</h3>
+					<h4>Smart-contract engineer</h4>
+					</div>
+				</div>
+
+
+			</div>
+
+			<div class="col-md-2">
+
+
+				<div class="team-member">
+					<img src="/images/team/member_kazenyukse.png" alt="">
+					<div class="team-member-caption">
+					<h3>Sergey Kazenyuk</h3>
+					<h4>Protocol architect</h4>
+					</div>
+				</div>
+
+			</div>
+			<div class="col-md-2">
+
+				<div class="team-member">
+					<img src="/images/team/member_kereminko.png" alt="">
+					<div class="team-member-caption">
+					<h3>Konstantion Koremin</h3>
+					<h4>UX/UI Designer</h4>
+					</div>
+				</div>
+
+
+			</div>
+
+		</div>
+		<br><br>
+		<h2>Advisers</h2>
+
+		<div class="row">
+			<div class="col-md-2">
+
+				<div class="team-member">
+					<img src="/images/team/member_devid.png" alt="">
+					<h3>Davide Gerin</h3>
+					<h4>Senior Manager Sport Betting</h4>
+				</div>
+
+
+			</div>
+			<div class="col-md-2">
+
+				<div class="team-member">
+					<img src="/images/team/member_mark.png" alt="">
+					<h3>Mark McGuinness</h3>
+					<h4>Marketing Consultant & iGAMING PR Specialist</h4>
+				</div>
+
+
+			</div>
+			<div class="col-md-2">
+
+				<div class="team-member">
+					<img src="/images/team/member_ian.png" alt="">
+					<h3>Ian Slater</h3>
+					<h4>Senior Manager Online Gaming</h4>
+				</div>
+
+
+			</div>
 		</div>
 	</div>
 </section>
 <section class="section section-10">
 	<div class="container">
-		<h2></h2>
+		<h2>Partners</h2>
 		<div class="row">
 			<div class="col-md-12"></div>
 		</div>
 	</div>
 </section>
+<!--
 <section class="section section-11">
 	<div class="container">
 		<h2></h2>
@@ -401,8 +537,11 @@
 		</div>
 	</div>
 </section>
+-->
 
-<footer></footer>
+<footer>
+	<h2>Don't miss any news</h2>
+</footer>
 <script src="./js/jquery.min.js"></script>
 <script src="./js/slick/slick.min.js"></script>
 <script src="./js/app.js"></script>
