--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>LUCKYCHAIN - Trust protocol for decentralized competitive environments</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<link rel="stylesheet" href="./js/slick/slick.css">
@@ -516,7 +516,15 @@
 	<div class="container">
 		<h2>Partners</h2>
 		<div class="row">
-			<div class="col-md-12"></div>
+			<div class="col-md-4 partners-logo">
+				<img src="/images/partners/logo_01.png" alt="" class="">
+			</div>
+			<div class="col-md-4 partners-logo">
+				<img src="/images/partners/logo_02.png" alt="" class="">
+			</div>
+			<div class="col-md-4 partners-logo">
+				<img src="/images/partners/logo_03.png" alt="" class="partners-logo">
+			</div>
 		</div>
 	</div>
 </section>
