--- a/public/index.html
+++ b/public/index.html
@@ -313,7 +313,7 @@
     </div>
 </section>
 
-<section class="section bg-light section-6">
+<section class="section section-6">
     <div class="container">
         <div class="tabs">
             <ul class="tabs__caption">
@@ -323,7 +323,7 @@
             </ul>
 
             <div class="tabs__content active">
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_14.svg" alt="" title="">
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_15.svg" alt="" title="">
@@ -399,7 +399,7 @@
             </div>
 
             <div class="tabs__content">
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_19.svg" alt="" title="">
@@ -430,7 +430,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_20.svg" alt="" title="">
@@ -461,7 +461,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_21.svg" alt="" title="">
@@ -506,7 +506,7 @@
             </div>
 
             <div class="tabs__content">
-                <div class="row">
+                <div class="row m-b-40">
                     <div class="col-md-6">
                         <div class="icon-block">
                             <img src="./images/icons/Icon_26.svg" alt="" title="">
@@ -519,6 +519,7 @@
                                     decentralized payment support. The LuckyChain ecosystem will support
                                     a range of identity solutions when they become production-ready.
                                 </p>
+                                <br>
                                 <ul>
                                     <li><strong>LuckyChain DAO is responsible for:</strong></li>
                                     <li>Ecosystem governance;</li>
@@ -573,20 +574,62 @@
         </div>
     </div>
 </section>
-<section class="section section-7">
+
+<section class="section bg-dark section-7">
     <div class="container">
         <h2>Token Generation Event</h2>
-        <div class="row">
+        <div class="row m-b-70">
+            <div class="col-md-5">
+                <div class="icon-block">
+                    <img src="./images/icons/LYC_icon.svg" alt="" title="">
+                    <div>
+                        <div class="price">1 LYC = 0,000025 BTC</div>
+                        <div class="text">
+                            <span>Total Supply</span>
+                            <p>100,000,000 tokens</p>
+                        </div>
+                        <div class="text">
+                            <span>Adjustable</span>
+                            <p>All unsold tokens will be burned</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
             <div class="col-md-6">
+                <div class="icon-block">
+                    <img src="http://via.placeholder.com/95x95" alt="" title="">
+                    <div class="diagram">
+                        <h4>The crowd sale structure<br>is as following</h4>
+                        <div class="row m-t-30">
+                            <div class="col-md-6">
+                                <span class="col-1">75%</span> - to be crowd sold<br>
+                                <span class="col-2">5%</span> - goes to Advisers<br>
+                                <span class="col-3">5%</span> - goes to Bounty<br>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="col-4">5%</span> - goes to early Investors<br>
+                                <span class="col-5">5%</span> - reserved for escrow<br>
+                                <span class="col-6">5%</span> - goes to the Team<br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
                 <h3>
                     Why do we need LuckyChain token?
                 </h3>
                 <p>LYC offers possibility to run any transaction on the platform; LYC can be purchased for BTC, ETH.</p>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-6">
                 <p>
                     LuckyChain tokens (LYC) will become the basic token for trusted competitive environments.
-                    <br>
+                </p>
+                <p>
                     All payments, exchanges, incentives and fees on LuckyChain decentralized platform will require LYC.
                     The total supply of LYC tokens will be limited to the amount of tokens created during the initial
                     LYC token generation described below.
@@ -595,6 +638,7 @@
         </div>
     </div>
 </section>
+
 <section class="section section-8">
     <div class="container">
         <h2></h2>
