--- a/public/index.html
+++ b/public/index.html
@@ -788,16 +788,28 @@
 
 <footer>
 	<div class="container">
-		<h2>Don't miss any news</h2>
 
 
-		<form class="header-form">
-			<p>Subscribe to our newsletter and be the first to learn about the Token sale</p>
-			<div class="form-group">
-				<input type="email" placeholder="Email">
-				<button>Subscribe</button>
+		<div class="row">
+			<div class="col-md-6">
+				<h2>Don't miss any news</h2>
+				<form class="header-form">
+					<p>Subscribe to our newsletter and be the first to learn about the Token sale</p>
+					<div class="form-group">
+						<input type="email" placeholder="Email">
+						<button>Subscribe</button>
+					</div>
+				</form>
+
 			</div>
-		</form>
+			<div class="col-md-3">
+				social
+			</div>
+			<div class="col-md-3">
+				copyright
+			</div>
+		</div>
+
 	</div>
 </footer>
 <script src="./js/jquery.min.js"></script>
