--- a/public/index.html
+++ b/public/index.html
@@ -639,17 +639,15 @@
     </div>
 </section>
 
-<section class="section section-8">
+<section class="section bg-light section-8">
 	<div class="container">
-		<h2></h2>
+		<h2>Roadmap</h2>
 		<div class="row">
-			<div class="col-md-12"></div>
+			<img src="http://via.placeholder.com/2500x400" alt="" title="">
 		</div>
 	</div>
 </section>
 
-
-/******************* RUSLAN ***************/
 <section class="section section-9">
 	<div class="container">
 		<h2>Team</h2>
@@ -711,7 +709,7 @@
 				<div class="team-member">
 					<img src="/images/team/member_ashikhminal.png" alt="">
 					<div class="team-member-caption">
-						<h3>Alex Ashikhmin</h3>
+						<h3>Alex Ashihmin</h3>
 						<h4>Frontend Engineer</h4>
 					</div>
 				</div>
