added new images and white-paper file

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 					</div>
 				</form>
 
-				<a href="#" download class="header-wp">
+				<a href="/LC_v.1.6rus.pdf" download class="header-wp">
 					<img src="/images/header/file_icon.svg" alt="">
 					Download WhitePaper (PDF)
 				</a>
@@ -256,7 +256,7 @@
 
 				<div class="column-chart">
 					<p>Market Size in Billion U.S. Dollars</p>
-					<img src="http://via.placeholder.com/500x300" alt="" title="">
+					<img src="/images/icons/MarketSize.svg" alt="" title="">
 				</div>
 
 				<p>The online gaming industry is expected to grow more than 10% in 2018 and reach $52B.</p>
@@ -598,7 +598,7 @@
             <div class="col-md-1"></div>
             <div class="col-md-6">
                 <div class="icon-block">
-                    <img src="http://via.placeholder.com/95x95" alt="" title="">
+                    <img src="/images/icons/Diagram.svg" alt="" title="">
                     <div class="diagram">
                         <h4>The crowd sale structure<br>is as following</h4>
                         <div class="row m-t-30">
@@ -643,7 +643,7 @@
 	<div class="container">
 		<h2>Roadmap</h2>
 		<div class="row">
-			<img src="http://via.placeholder.com/2500x400" alt="" title="">
+			<img src="/images/icons/Roadmap.svg" alt="" title="">
 		</div>
 	</div>
 </section>
@@ -668,7 +668,7 @@
 
 
 				<div class="team-member">
-					<img src="/images/team/member_ruslanin.png" alt="">
+					<img src="/images/team/member_anna_grigoryeva.png" alt="">
 					<div class="team-member-caption">
 						<h3>Anna Grigoryeva</h3>
 						<h4>ICO Manager</h4>
@@ -681,7 +681,7 @@
 
 
 				<div class="team-member">
-					<img src="/images/team/member_ruslanin.png" alt="">
+					<img src="/images/team/member_nick_avramov.png" alt="">
 					<div class="team-member-caption">
 						<h3>Nick Avramov</h3>
 						<h4>Product Manager</h4>
