put social buttons to footer

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,6 @@
 				<a href="#">
 					<img src="/images/header/icon_bitcoin.svg" alt="">
 				</a>
-
 			</div>
 			<div class="languages header-socialAndLang-item">English</div>
 		</div>
@@ -830,16 +829,48 @@
 
 <footer>
 	<div class="container">
-		<h2>Don't miss any news</h2>
-
-
-		<form class="header-form">
-			<p>Subscribe to our newsletter and be the first to learn about the Token sale</p>
-			<div class="form-group">
-				<input type="email" placeholder="Email">
-				<button>Subscribe</button>
+		<div class="row">
+			<div class="col-md-7">
+				<h2>Don't miss any news</h2>
+				<form class="header-form">
+					<p>Subscribe to our newsletter and be the first to learn about the Token sale</p>
+					<div class="form-group">
+						<input type="email" placeholder="Email">
+						<button>Subscribe</button>
+					</div>
+				</form>
 			</div>
-		</form>
+
+			<img src="/images/footer/footer_logo.svg" alt="" class="footer-logo">
+		</div>
+	</div>
+	<div class="container">
+		<div class="flex-container">
+			<nav class="js-navigation">
+				<a href="#">Product</a>
+				<a href="#">Features</a>
+				<a href="#">Team</a>
+				<a href="#">Partners</a>
+				<a href="#">FAQ</a>
+			</nav>
+			<div class="header-socialAndLang">
+				<div class="header-socials header-socialAndLang-item">
+					<a href="#">
+						<img src="/images/header/icon_github.svg" alt="">
+					</a>
+					<a href="#">
+						<img src="/images/header/icon_facebook.svg" alt="">
+					</a>
+					<a href="#">
+						<img src="/images/header/icon_telegram.svg" alt="">
+					</a>
+					<a href="#">
+						<img src="/images/header/icon_bitcoin.svg" alt="">
+					</a>
+				</div>
+			</div>
+			<div>2017 © Lucky Chain. All rights reserved</div>
+		</div>
 	</div>
 </footer>
 <script src="./js/jquery.min.js"></script>
